--- a/css/style.css
+++ b/css/style.css
@@ -595,11 +595,15 @@ padding-top:20px;
 }
 .container-11 .block-1 span{
 color:#444;
+padding: 15px;
 font-size: 15px;
 font-family: nunito;
 font-weight: bold;
+background -color: #fff;
+box-shadow:0px 0px 7px 0.4px #666;
 }
 .container-11 .block-1 span a{
+color:#fff;
 padding:5px;
 background-color:#0066CC;
 text-decoration:none;
