--- a/css/style.css
+++ b/css/style.css
@@ -599,6 +599,7 @@ font-size: 15px;
 font-family: nunito;
 font-weight: bold;
 border-radius:3px;
+padding: 8px;
 background-color: #fff;
 box-shadow:0px 0px 7px 0.4px #666;
 }
