--- a/css/style.css
+++ b/css/style.css
@@ -593,7 +593,7 @@ font-weight: bold;
 .container-11 .block-1{
 margin-top:20px;
 }
-.container-11 .block-1 div{
+.container-11 .block-1 span{
 color:#444;
 font-size: 14px;
 font-family: nunito;
@@ -603,7 +603,7 @@ padding: 8px;
 background-color: #fff;
 box-shadow:0px 0px 7px 0.4px #666;
 }
-.container-11 .block-1 div a{
+.container-11 .block-1 span a{
 color:#fff;
 padding:8px;
 left:8px;
