--- a/css/style.css
+++ b/css/style.css
@@ -596,6 +596,7 @@ margin-top:20px;
 .container-11 .block-1 span{
 color:#444;
 font-size: 14px;
+line-height:3.1;
 font-family: nunito;
 font-weight: bold;
 border-radius:3px;
