--- a/css/style.css
+++ b/css/style.css
@@ -586,8 +586,8 @@ padding:10px;
 }
 .container-11 span{
 color:#444;
-font-size: 19px;
-font-family: nunito;
+font-size: 25px;
+font-family: kalam;
 font-weight: bold;
 }
 .container-11 .block-1{
@@ -595,7 +595,7 @@ margin-top:20px;
 }
 .container-11 .block-1 span{
 color:#444;
-font-size: 14px;
+font-size: 13px;
 line-height:4.1;
 font-family: nunito;
 font-weight: bold;
