--- a/css/style.css
+++ b/css/style.css
@@ -584,7 +584,7 @@ line-height:2.1;
 margin-top: 20px;
 padding:10px;
 }
-.container-11 span{
+.container-11 h2{
 color:#444;
 font-size: 25px;
 font-family: kalam;
