--- a/css/style.css
+++ b/css/style.css
@@ -609,7 +609,7 @@ color:#fff;
 padding:8px;
 left:8px;
 position: relative;
-border-radius:3px;
+border-radius:3px 0px 0px 3px;
 background-color:#0066CC;
 text-decoration:none;
 }
