--- a/css/style.css
+++ b/css/style.css
@@ -597,7 +597,7 @@ margin-top:20px;
 color:#444;
 font-size: 13px;
 line-height:4.1;
-font-family: nunito;
+font-family: lato;
 font-weight: bold;
 border-radius:3px;
 padding: 8px;
@@ -606,7 +606,7 @@ box-shadow:0px 0px 7px 0.4px #999;
 }
 .container-11 .block-1 span a{
 color:#fff;
-padding:8.4px;
+padding:9px;
 left:8px;
 position: relative;
 border-radius:0px 3px 3px 0px;
