--- a/css/style.css
+++ b/css/style.css
@@ -599,6 +599,7 @@ font-size: 13px;
 line-height:4.1;
 font-family: lato;
 font-weight: bold;
+border:2px solid #222;
 border-radius:3px;
 padding: 8px;
 background-color: #fff;
