--- a/css/style.css
+++ b/css/style.css
@@ -614,6 +614,10 @@ border-radius:0px 3px 3px 0px;
 background-color:#0066CC;
 text-decoration:none;
 }
+.container-11 .block-1 span a{
+color:#fff;
+background-color:#0066CC;
+}
 /*SECTION 11 EPISODES*/
 
 /*SECTION 6*/
