--- a/css/style.css
+++ b/css/style.css
@@ -553,6 +553,7 @@ margin-right: auto;
 /*SECTION 10 MANGA*/
 .container-10{
 padding:10px;
+background-color: red;
 }
 .container-10 span{
 color:#fff;
