--- a/css/style.css
+++ b/css/style.css
@@ -562,6 +562,7 @@ font-family: lato;
 font-weight: bold;
 line-height:1.5;
 padding: 5px;
+display: flex;
 background-color: grey;
 }
 .container-10 img{
