--- a/css/style.css
+++ b/css/style.css
@@ -664,7 +664,7 @@ footer .block-3{
 }
 footer .block-3 span{
 color:#444;
-font-size: 10pt;
+font-size: 15px;
 font-family: lato;
 font-weight: normal;
 line-height:2.1;
