--- a/css/style.css
+++ b/css/style.css
@@ -793,4 +793,10 @@ line-height:1.4;
 font-weight: normal;
 text-decoration: none;
 }
+#disqustyle{
+width:90%;
+margin-left:auto;
+margin-right:auto;
+font-family:nunito;
+}
 /*END MISCELLANEOUS*/
