--- a/css/style.css
+++ b/css/style.css
@@ -890,4 +890,23 @@ line-height:1.4;
 font-weight: normal;
 text-decoration: none;
 }
+.prevnext{
+width:100%;
+bottom:0px;
+padding:15px;
+position: fixed;
+background-color: #0066CC;
+}
+.prevnext span{
+color:#444;
+font-size: 30px;
+font-family: nunito;
+text-align:center;
+line-height:1.4;
+font-weight: normal;
+text-decoration: none;
+}
+.prevnext span a{
+
+}
 /*END MISCELLANEOUS*/
