--- a/css/style.css
+++ b/css/style.css
@@ -902,6 +902,7 @@ font-size: 20px;
 font-family: kalam;
 text-align:center;
 line-height:1.4;
+padding:15px;
 font-weight: normal;
 text-decoration: none;
 background-color: crimson;
