--- a/css/style.css
+++ b/css/style.css
@@ -899,7 +899,7 @@ position: fixed;
 background-color: #fff;
 }
 .prevnext a{ 
-color:#fff;
+color:#333;
 font-size: 18px;
 font-family: kalam;
 text-align:center;
