--- a/css/style.css
+++ b/css/style.css
@@ -910,6 +910,6 @@ background-color: red;
 }
 .prevnext a #next{
 padding:14px;
-background-color: crimson;
+background-color: gold;
 }
 /*END MISCELLANEOUS*/
