--- a/css/style.css
+++ b/css/style.css
@@ -898,7 +898,7 @@ position: fixed;
 }
 .prevnext a{ 
 width:100%;
-color:#fff;
+color:#444;
 font-size: 17px;
 font-family: kalam;
 text-align:center;
@@ -906,7 +906,7 @@ line-height:1.4;
 padding:12px;
 font-weight: normal;
 text-decoration: none;
-background: linear-gradient(270deg,black,#000);
+background: linear-gradient(270deg,#fff,#f2f8ff);
 }
 .prevnext a #next{
 padding:12px;
